cmake_minimum_required (VERSION 2.6)
project(GUI)

message(STATUS "Looking for pkg-config")
find_package(PkgConfig QUIET)
IF(PKG_CONFIG_FOUND)
  set(MISSES "Please install the following packages:")
  message(STATUS "Found PkgConfig (found version \"${PKG_CONFIG_VERSION_STRING}\")")

  message(STATUS "Looking for gtkmm-3.0")
  pkg_check_modules(GTKMM QUIET gtkmm-3.0>=3.0)
  IF(NOT GTKMM_FOUND)
    message(STATUS "Missing gtkmm-3.0 (version \">=3.0 required\")")
    message(STATUS "                  (gtkmm-3.0.pc missing)")
    set(MISSES "${MISSES}\n  gtkmm-3.0 (http://www.gtkmm.org)")
    set(MISSES "${MISSES}\n    (check PKG_CONFIG_PATH if it is already installed)")
  ELSE(NOT GTKMM_FOUND)
    message(STATUS "Found gtkmm-3.0 (found version \"${GTKMM_VERSION}\")")
  ENDIF(NOT GTKMM_FOUND)

  message(STATUS "Looking for Gazebo Simulator")
  pkg_check_modules(GAZEBO QUIET gazebo>=1.0.0)
  IF(NOT GAZEBO_FOUND)
    message(STATUS "Missing Gazebo Simulator (version \">= 1.0.0\")")
    message(STATUS "                         (gazebo.pc missing)")
    set(MISSES "${MISSES}\n  Gazebo Simulator (http://www.gazebosim.org/)")
    set(MISSES "${MISSES}\n    (check PKG_CONFIG_PATH if it is already installed)")
  ELSE(NOT GAZEBO_FOUND)
    message(STATUS "Found Gazebo Simulator (found version \"${GAZEBO_VERSION}\")")
  ENDIF(NOT GAZEBO_FOUND)

  message(STATUS "Looking for Google Protobuf")
  pkg_check_modules(PROTOBUF QUIET protobuf>=2.4.0)
  IF(NOT PROTOBUF_FOUND)
    message(STATUS "Missing Google Protobuf (version \">= 2.4.0\")")
    message(STATUS "                         (protobuf.pc missing)")
    set(MISSES "${MISSES}\n  Google Protobuf (http://code.google.com/p/protobuf/)")
    set(MISSES "${MISSES}\n    (check PKG_CONFIG_PATH if it is already installed)")
  ELSE(NOT PROTOBUF_FOUND)
    message(STATUS "Found Google Protobuf (found version \"${PROTOBUF_VERSION}\")")
  ENDIF(NOT PROTOBUF_FOUND)

  message(STATUS "Looking for Boost")
  find_package(Boost 1.47 COMPONENTS system QUIET)
  IF(NOT Boost_FOUND)
    message(STATUS "Missing Boost (version \">= 1.47.0\")")
    set(MISSES "${MISSES}\n  Boost (http://www.boost.org/)")
  ELSE(NOT Boost_FOUND)
    message(STATUS "Found Boost (found version \"${Boost_VERSION}\")")
  ENDIF(NOT Boost_FOUND)

  IF(GTKMM_FOUND AND GAZEBO_FOUND AND PROTOBUF_FOUND AND Boost_FOUND)
  set(LDFLAGS "${GTKMM_LDFLAGS}; ${GAZEBO_LDFLAGS}; ${PROTOBUF_LDFLAGS}")
  FOREACH(FLAG ${LDFLAGS})
    set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} ${FLAG}" CACHE INTERNAL "General CXX Flags")
  ENDFOREACH(FLAG ${CFLAGS})

  set(CFLAGS "${GTKMM_CFLAGS}; ${GAZEBO_CFLAGS}; ${PROTOBUF_CFLAGS}")
  set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -g -Wextra -Wall -Wno-long-long -pedantic-errors -std=c++98 -lboost_system-mt" CACHE INTERNAL "General CXX Flags")
  FOREACH(FLAG ${CFLAGS})
    set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} ${FLAG}" CACHE INTERNAL "General CXX Flags")
  ENDFOREACH(FLAG ${CFLAGS})

  add_executable(GUI src/scenegui.cpp src/scenetab.cpp src/loggertab.cpp src/controltab.cpp src/modeltab.cpp src/robotcontrollertab.cpp)
  ELSE(GTKMM_FOUND AND GAZEBO_FOUND AND PROTOBUF_FOUND AND Boost_FOUND)
    message(FATAL_ERROR "Missing packages\n\n${MISSES}")
  ENDIF(GTKMM_FOUND AND GAZEBO_FOUND AND PROTOBUF_FOUND AND Boost_FOUND)
ELSE(PKG_CONFIG_FOUND)
  message(STATUS "Missing pkg-config")
  message(FATAL_ERROR "Aborting: pkg-config missing")
ENDIF(PKG_CONFIG_FOUND)


