cmake_minimum_required (VERSION 2.6)
project(SceneReconstructionTools)

SET(RESOURCE_FILES  noimg.png
                    ui.glade
                    wogen.glade)
message("")
message(STATUS "Looking for required and optional components:")
message("   Looking for PkgConfig")
find_package(PkgConfig QUIET)
IF(PKG_CONFIG_FOUND)
  set(MISSES "Please install the following packages:")
  message("      Found PkgConfig (found version \"${PKG_CONFIG_VERSION_STRING}\")")

  message("   Looking for gtkmm-3.0")
  pkg_check_modules(GTKMM QUIET gtkmm-3.0>=3.0)
  IF(NOT GTKMM_FOUND)
    message("      Missing gtkmm-3.0 (version \">=3.0 required\")")
    message("                        (gtkmm-3.0.pc missing?)")
    set(MISSES "${MISSES}\n   gtkmm-3.0 (http://www.gtkmm.org)")
    set(MISSES "${MISSES}\n     (check PKG_CONFIG_PATH if it is already installed)")
  ELSE(NOT GTKMM_FOUND)
    message("      Found gtkmm-3.0 (found version \"${GTKMM_VERSION}\")")
  ENDIF(NOT GTKMM_FOUND)

  message("   Looking for Gazebo Simulator")
  pkg_check_modules(GAZEBO QUIET gazebo>=1.0.0)
  IF(NOT GAZEBO_FOUND)
    message("      Missing Gazebo Simulator (version \">= 1.0.0\")")
    message("                               (gazebo.pc missing?)")
    set(MISSES "${MISSES}\n   Gazebo Simulator (http://www.gazebosim.org/)")
    set(MISSES "${MISSES}\n     (check PKG_CONFIG_PATH if it is already installed)")
  ELSE(NOT GAZEBO_FOUND)
    message("      Found Gazebo Simulator (found version \"${GAZEBO_VERSION}\")")
  ENDIF(NOT GAZEBO_FOUND)

  message("   Looking for Google Protobuf")
  pkg_check_modules(PROTOBUF QUIET protobuf>=2.4.0)
  IF(NOT PROTOBUF_FOUND)
    message("      Missing Google Protobuf (version \">= 2.4.0\")")
    message("                              (protobuf.pc missing?)")
    set(MISSES "${MISSES}\n   Google Protobuf (http://code.google.com/p/protobuf/)")
    set(MISSES "${MISSES}\n     (check PKG_CONFIG_PATH if it is already installed)")
  ELSE(NOT PROTOBUF_FOUND)
    message("      Found Google Protobuf (found version \"${PROTOBUF_VERSION}\")")
  ENDIF(NOT PROTOBUF_FOUND)

  message("   Looking for Boost")
  find_package(Boost 1.47.0 QUIET COMPONENTS system filesystem)
  IF(NOT Boost_FOUND)
    message("      Missing Boost (version \">= 1.47.0\")")
    set(MISSES "${MISSES}\n   Boost (http://www.boost.org/)")
  ELSE(NOT Boost_FOUND)
    message("      Found Boost (found version \"${Boost_MAJOR_VERSION}.${Boost_MINOR_VERSION}.${Boost_SUBMINOR_VERSION}\")")
  ENDIF(NOT Boost_FOUND)

  message("   Looking for Graphviz libgvc")
  pkg_check_modules(GRAPHVIZ QUIET libgvc>=2.22)
  IF(NOT GRAPHVIZ_FOUND)
    message("      Missing libgvc (version \">= 2.22\")")
    message("                     (libgvc.pc missing?)")
    set(MISSES "${MISSES}\n   Graphviz (http://www.graphviz.org/)")
    set(MISSES "${MISSES}\n     (check PKG_CONFIG_PATH if it is already installed)")
  ELSE(NOT GRAPHVIZ_FOUND)
    message("      Found libgvc (found version \"${GRAPHVIZ_VERSION}\")")
  ENDIF(NOT GRAPHVIZ_FOUND)

  message("   Looking for Doxygen")
  find_package(Doxygen QUIET)
  IF(NOT DOXYGEN_FOUND)
    message("      Missing Doxygen, omitting generation of documentation")
    set(OPTMISSES "${OPTMISSES}   Doxygen\n")
  ELSE(NOT DOXYGEN_FOUND)
    message("      Found Doxygen (found version \"${DOXYGEN_VERSION}\")")
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/gui.doxygen.in ${CMAKE_CURRENT_BINARY_DIR}/gui.doxygen @ONLY)
    add_custom_target(doc ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/gui.doxygen WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} COMMENT "Generating API documentation with Doxygen" VERBATIM)
  ENDIF(NOT DOXYGEN_FOUND)
  
  IF(GTKMM_FOUND AND GAZEBO_FOUND AND PROTOBUF_FOUND AND Boost_FOUND AND GRAPHVIZ_FOUND)
    message("")
    message(STATUS "Checking resource files:")
    FOREACH(RES ${RESOURCE_FILES})
      SET(RESFOUND)
      SET(RESCOPY)
      SET(RESDIFFER)
      find_file(RESFOUND ${RES} ${CMAKE_CURRENT_BINARY_DIR}/res/)
      message("\tLooking for \"res/${RES}\"")
      IF(NOT RESFOUND)
        SET(RESCOPY copy)
        message("\tLooking for \"res/${RES}\" - not found")
      ELSE(NOT RESFOUND)
        execute_process(COMMAND ${CMAKE_COMMAND} -E compare_files ${CMAKE_CURRENT_SOURCE_DIR}/res/${RES} ${CMAKE_CURRENT_BINARY_DIR}/res/${RES} RESULT_VARIABLE RESDIFFER OUTPUT_QUIET ERROR_QUIET)
        IF(RESDIFFER)
          SET(RESCOPY copy)
          message("\tLooking for \"res/${RES}\" - found different version")
        ELSE(REDIFFER)
          message("\tLooking for \"res/${RES}\" - found")
        ENDIF(RESDIFFER)
      ENDIF(NOT RESFOUND)

      IF(RESCOPY)
        file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/res/${RES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/res/)
        message("\t\tCopied res/${RES}")
      ENDIF(RESCOPY)
    ENDFOREACH(RES)

    include_directories(${GRAPHVIZ_INCLUDE_DIRS})
    include_directories(${GTKMM_INCLUDE_DIRS})
    include_directories(${GAZEBO_INCLUDE_DIRS})
    include_directories(${PROTOBUF_INCLUDE_DIRS})
    include_directories(${Boost_INCLUDE_DIRS})
    link_directories(${GRAPHVIZ_LIBRARY_DIRS})
    link_directories(${GTKMM_LIBRARY_DIRS})
    link_directories(${GAZEBO_LIBRARY_DIRS})
    link_directories(${PROTOBUF_LIBRARY_DIRS})
    link_directories(${Boost_LIBRARY_DIRS})
    
    set(CMAKE_CXX_FLAGS " -g -Wextra -Wall -lstdc++" CACHE INTERNAL "General CXX Flags")

    add_executable(CAT src/scenegui.cpp src/scenetab.cpp src/controltab.cpp src/loggertab.cpp src/robotcontrollertab.cpp src/objectinstantiatortab.cpp src/frameworktab.cpp src/dikwtab.cpp src/graph_drawing_area.cpp src/gvplugin_cairo.cpp src/analysistab.cpp)
    add_executable(wogen src/wogen.cpp)

    target_link_libraries(CAT ${GRAPHVIZ_LIBRARIES})
    target_link_libraries(CAT ${GTKMM_LIBRARIES})
    target_link_libraries(CAT ${GAZEBO_LIBRARIES})
    target_link_libraries(CAT ${PROTOBUF_LIBRARIES})
    target_link_libraries(CAT ${Boost_LIBRARIES})
    target_link_libraries(wogen ${GTKMM_LIBRARIES})
    
    message("\n\n")
    message(STATUS "Usage:")
    message("\tmake        - generate the executables")
    message("\tmake CAT    - generate the scene reconstruction control and analysis tool")
    message("\tmake wogen  - generate the worldfile generator")
    IF(DOXYGEN_FOUND)
      message("\tmake doc    - generate the documentation\n\n\n")
    ENDIF(DOXYGEN_FOUND)
  ELSE(GTKMM_FOUND AND GAZEBO_FOUND AND PROTOBUF_FOUND AND Boost_FOUND AND GRAPHVIZ_FOUND)
    message(FATAL_ERROR "Missing packages\n\n${MISSES}")
  ENDIF(GTKMM_FOUND AND GAZEBO_FOUND AND PROTOBUF_FOUND AND Boost_FOUND AND GRAPHVIZ_FOUND)
  
  IF(OPTMISSES)
    message(SEND_ERROR "Missing optional parts\n")
    message("${OPTMISSES}")
  ENDIF(OPTMISSES)
ELSE(PKG_CONFIG_FOUND)
  message("   Missing pkg-config")
  message(FATAL_ERROR "Aborting: pkg-config missing")
ENDIF(PKG_CONFIG_FOUND)

